docs(high-performance-topic): 更新 Netty 集群聊天文档
- 添加 Docker Compose 部署方式说明
- 补充 Redis 服务配置示例
- 更新微服务和 Netty 服务的 Dockerfile 示例
- 新增 Docker Compose 常用命令和注意事项说明
- 添加遇到的问题及解决方案